--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
+    "react-photo-view": "^1.2.7",
     "react-router-dom": "^7.8.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
